- 0.9.2:
        - implemented expansion level in redvypr_addressWidget
        - first draft of PcolorPlot
        - Added new empty string feature in RedvyprAddress('/k:'). Empty string means that the entry is explicitly not checked.
        - added distribute_data_replyqueue, that allows to send datapackets to the distribute thread and wait for the answer. Used to update statistics in a centralized way with set_metadata
        - improved datakey comparison
        - metadata design changed
- 0.9.1:
        - less verbose
        - RedvyprAddress is not expanding missing address entries with a '*'
        - implemented ``__setitem__`` of Datapacket object
        - 'all' datakey bug in network_device when config is loaded
        - generic_sensor calibration
        - RedvyprAddress accepts string and treats it as datakey entry: RedvyprAddress('hello') is equal to RedvyprAddress('/k:hello')
        - Datapacket.address implemented, datapacket has now also its redvypr address
        - RedvyprAddress is hashable, i.e. can be used as dictionary entries
        - manual_input device added
        - Datapacket accepts datapacket is input
        - generic_sensor update
        - redvypr.get_packetids() and RedvyprDevice.get_packetids() implemented
        - several bug fixes in redvypr_addressWidget.py, it accepts now packetid and can treat several items using regular expressions.
        - __configType == 'configRedvyprAddress' data type changed to RedvyprAddress instead of str
- 0.9.0:
        - autostart bug
        - autocalibration in calibration device
        - initdevicewidget parameter bug fixed
- 0.8.9:
        - renamed ``devicedisplaywidget.update`` in ``.update_data``
        - redvypr: devicedict cleaned, removed 'dataout', refactored 'gui' and 'guiqueue' into 'guiqueues'
- 0.8.8:
        - datastreamsWidget implemented
        - bugs in RedvyprAddress with packetid defined or an update of datakey